docs: refine API contracts and internal comments